[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    description = "Utility lib for building & using FreeRTOS in rust projects inside the build.rs."
    edition = "2024"
    license = "MIT"
    name = "freertos-build"
    readme = "README.md"
    repository = "https://github.com/mcu-rust/FreeRTOS"
    version = "0.3.1"

[lib]

[dependencies]
    cc = "1.0.52"
    walkdir = "2.3.1"
