[package]
    authors = ["Tobias Kaupat <tk@lobaro.de>"]
    description = """
Create to use FreeRTOS in rust projects. It contains binaries for demos on some architecutres.
"""
    edition = "2024"
    keywords = ["FreeRTOS", "embedded", "demo", "examples"]
    name = "freertos-rust-examples"
    repository = "https://github.com/lobaro/FreeRTOS-rust"
    version = "0.1.1"


# Example: stm32-cortex-m3
[target.thumbv7m-none-eabi.dependencies]
    cortex-m-rt = "0.7"
    freertos-next = { path = "../freertos", features = ["standard"] }
    stm32f1-hal = { version = "0.7", features = ["f103", "x8"] }

# Example: stm32-cortex-m4-blackpill
[target.thumbv7em-none-eabihf.dependencies]
    cortex-m = "0.7"
    cortex-m-rt = "0.7"
    embedded-hal = "1.0"
    freertos-next = { path = "../freertos", features = ["hooks"] }
    stm32f4xx-hal = { version = "0.22", features = ["stm32f411"] }

# Example: nrf9160
[target."thumbv8m.main-none-eabihf".dependencies]
    cortex-m = "0.7"
    cortex-m-rt = "0.7"
    freertos-next = { path = "../freertos", features = ["standard"] }
    nrf9160-pac = { version = "0.12", features = ["rt"] }

# Example: win
[target.x86_64-pc-windows-msvc.dependencies]
    freertos-next = { path = "../freertos", features = ["standard"] }

# Example: linux
[target.x86_64-unknown-linux-gnu.dependencies]
    freertos-next = { path = "../freertos", features = ["standard"] }

[build-dependencies]
    freertos-build = { path = "../freertos-build" }
