[package]
name = "freertos-rust"
version = "0.3.0"
authors = ["Jalon Wong <jalonwong@gmail.com>"]
edition = "2024"
description = """
Create to use FreeRTOS in rust projects.
The freertos-cargo-build crate can be used to build and link FreeRTOS from source inside build.rs.
"""
keywords = ["FreeRTOS", "embedded", "demo", "library"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lobaro/FreeRTOS-rust"
links = "freertos"

[lib]
name = "freertos_rust"
path = "src/lib.rs"

[features]
default = ["allocator", "sync", "time", "hooks", "interrupt", "delete_task"]
allocator = []
sync = ["interrupt"]
time = ["interrupt"]
hooks = []
interrupt = []
cpu_clock = []
delete_task = []
critical_section_impl = ["critical-section/restore-state-u32"]
std = ["critical-section/std"]

[dependencies]
critical-section = "1"
mutex-traits = "1"
os-trait = "0.3"
