[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    description = """Create to use FreeRTOS in rust projects.
The freertos-cargo-build crate can be used to build and link FreeRTOS from source inside build.rs."""
    documentation = "https://docs.rs/freertos-rs"
    edition = "2024"
    keywords = ["FreeRTOS", "RTOS", "embedded", "MCU"]
    license = "MIT"
    links = "freertos"
    name = "freertos-rs"
    readme = "README.md"
    repository = "https://github.com/mcu-rust/FreeRTOS"
    version = "0.3.0"


[lib]
    name = "freertos_rs"
    path = "src/lib.rs"

[features]
    allocator = []
    cpu_clock = []
    critical_section_impl = ["critical-section/restore-state-u32"]
    default = ["allocator", "sync", "time", "hooks", "interrupt", "delete_task"]
    delete_task = []
    hooks = []
    interrupt = []
    std = ["critical-section/std"]
    sync = ["interrupt"]
    time = ["interrupt"]

[dependencies]
    critical-section = "1"
    mutex-traits = "1"
    os-trait = "0.3"
