[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    description = """Create to use FreeRTOS in rust projects.
The freertos-build crate can be used to build and link FreeRTOS from source inside build.rs."""
    documentation = "https://docs.rs/freertos-next"
    edition = "2024"
    keywords = ["FreeRTOS", "RTOS", "embedded", "MCU"]
    license = "MIT"
    links = "freertos"
    name = "freertos-next"
    readme = "README.md"
    repository = "https://github.com/mcu-rust/FreeRTOS"
    version = "0.4.0"


[lib]
    name = "freertos_next"
    path = "src/lib.rs"

[features]
    default = ["allocator", "sync", "time", "hooks", "interrupt", "delete_task"]

    allocator = []
    cpu_clock = []
    critical_section_impl = ["critical-section/restore-state-u32"]
    delete_task = []
    hooks = []
    interrupt = []
    std = ["critical-section/std"]
    sync = ["interrupt"]
    time = ["interrupt"]

[dependencies]
    critical-section = "1"
    mutex-traits = "1"
    os-trait = "0.5"
