[package]
    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    description = """Create to use FreeRTOS in rust projects.
The freertos-build crate can be used to build and link FreeRTOS from source inside build.rs."""
    documentation = "https://docs.rs/freertos-next"
    edition = "2024"
    homepage = "https://github.com/mcu-rust/FreeRTOS/tree/main/freertos"
    keywords = ["FreeRTOS", "RTOS", "embedded", "MCU"]
    license = "MIT"
    links = "freertos"
    name = "freertos-next"
    readme = "README.md"
    version = "0.12.0"


[lib]
    name = "freertos_next"
    path = "src/lib.rs"

[features]
    default = ["minimum"]

    minimum = ["allocator", "sync", "time"]
    standard = [
        "minimum",
        "delete-task",
        "heap-free-size",
        "stack-high-water",
        "critical-section-impl",
    ]

    allocator = []
    assert-hook = []
    counting-semaphore = []
    cpu-clock = []
    critical-section-impl = ["critical-section/restore-state-u32"]
    delay-until = []
    delete-task = []
    heap-free-size = ["allocator"]
    interrupt = []
    recursive-mutex = []
    stack-high-water = []
    sync = ["interrupt"]
    task-suspend = []
    time = ["interrupt"]
    trace-facility = []

[dependencies]
    critical-section = "1"
    mutex-traits = "1"
    os-trait = "0.11"

[target.'cfg(all(target_arch = "arm", target_os = "none", any(target_abi = "eabi", target_abi = "eabihf")))'.dependencies]
    cortex-m = "0.7"
